add special thanks

--- a/templates/default/1.html.twig
+++ b/templates/default/1.html.twig
@@ -6,9 +6,19 @@
 
     <div class="container">
         <h1>Oisif Agressif n°1</h1>
+        <ul>
+            <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
+            <a href="https://www.instagram.com/dernierechanceeditions/" target = "_blank">instagram.com/dernierechanceeditions/</a></li>
 
+            <li><b>Illustratrice invitée : </b>Ekkynox
+            <a href="https://www.etsy.com/fr/shop/Ekkynox" target = "_blank">etsy.com/fr/shop/Ekkynox</a></li>
+
+            <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target = "_blank">octokunst.tumblr.com/</a></li>
+        </ul>
+
+        <p><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('home')}}">Revenir à la liste de tous les superbes numéros</a></p>
+        <p></p>
         <iframe style="width:100%; height:800px;" src="//e.issuu.com/embed.html#32831657/58758964" frameborder="0" allowfullscreen></iframe>
-        <p><a href="{{ path('home')}}">Revenir à la liste de tous les superbes numéros</a></p>
     </div>
 
 {% endblock %}
