--- a/templates/default/2.html.twig
+++ b/templates/default/2.html.twig
@@ -6,9 +6,20 @@
 
     <div class="container">
         <h1>Oisif Agressif n°2</h1>
+        <ul>
+            <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
+                <a href="https://www.instagram.com/dernierechanceeditions/" target = "_blank">instagram.com/dernierechanceeditions/</a></li>
+
+            <li><b>Illustrateur invité : </b>moins273virgule15
+                <a href="https://www.instagram.com/moins273virgule15/" target = "_blank">instagram.com/moins273virgule15/</a></li>
+
+            <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target = "_blank">octokunst.tumblr.com/</a></li>
+        </ul>
+
+        <p><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('home')}}">Revenir à la liste de tous les superbes numéros</a></p>
+        <p></p>
         <div data-configid="32831657/58764903" style="width:100%; height:800px;" class="issuuembed"></div>
         <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
-        <p><a href="{{ path('home')}}">Revenir à la liste de tous les superbes numéros</a></p>
 
     </div>
     <div
