--- a/templates/default/3.html.twig
+++ b/templates/default/3.html.twig
@@ -7,9 +7,24 @@
 
     <div class="container">
         <h1>Oisif Agressif n°3</h1>
+
+            <ul>
+                <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
+                    <a href="https://www.instagram.com/dernierechanceeditions/" target = "_blank">instagram.com/dernierechanceeditions/</a></li>
+
+                <li><b>Illustratrice invitée : </b>Sainte Mathilde
+                    <a href="https://www.instagram.com/sainte_mathilde/" target = "_blank">instagram.com/sainte_mathilde/</a></li>
+                <li><b>Invité jeux et playlist : </b>Seb And The Rhaadicks
+                    <a href="http://sebandtherhaadicks.tumblr.com/" target = "_blank">sebandtherhaadicks.tumblr.com/</a></li>
+
+                <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target = "_blank">octokunst.tumblr.com/</a></li>
+            </ul>
+
+            <p><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('home')}}">Revenir à la liste de tous les superbes numéros</a></p>
+            <p></p>
         <div class="card" style="width: 18rem;">
 
-            <a href="{{ path('compil3')}}">
+        <a href="{{ path('compil3')}}">
             <img class="card-img-top" src="{{ asset('/img/Oisif-agressif-K7.jpg') }}" alt="Compil train">
             </a>
             <div class="card-body">
@@ -20,7 +35,6 @@
             </div>
         </div>
 
-        <p><a href="{{ path('home')}}">Revenir à la liste de tous les superbes numéros</a></p>
     </div>
     <div
 {% endblock %}
