--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
@@ -17,4 +18,17 @@
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         {% endblock %}
     </body>
+        <footer class="footer">
+            {% block footer %}
+
+            <div class="container">
+                <p><a href="{{ path('home')}}"><i class="fas fa-arrow-left"></i> Revenir à la liste de tous les superbes numéros</a></p>
+                <p></p>
+                <span class="text-muted"><a href="https://www.instagram.com/oisifagressif/?hl=fr">Suivez-nous sur <i class="fab fa-instagram"></i> et gagnez des points de Karma !</a></span>
+                <span>- et/ou -</span>
+                <span class="text-muted"><a href="{{ path('contact')}}">Envoyez-nous des mots doux</a></span>
+            </div>
+            {% endblock %}
+
+        </footer>
 </html>
