--- a/templates/default/3.html.twig
+++ b/templates/default/3.html.twig
@@ -6,8 +6,14 @@
 {% block body %}
 
     <div class="container">
-        <h1>Oisif Agressif n°3</h1>
-
+        <div class="row">
+            <div class="col-1">
+                <a href="{{ path('home')}}"> <img src="{{ asset('/img/oisif.png') }}" alt="oisif agressif"></a>
+            </div>
+            <div class="col-sm">
+                <h1>Oisif Agressif n°3</h1>
+            </div>
+        </div>
             <ul>
                 <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
                     <a href="https://www.instagram.com/dernierechanceeditions/" target = "_blank">instagram.com/dernierechanceeditions/</a></li>
@@ -20,8 +26,7 @@
                 <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target = "_blank">octokunst.tumblr.com/</a></li>
             </ul>
 
-            <p><span class="glyphicon glyphicon-chevron-left"></span><a href="{{ path('home')}}">Revenir à la liste de tous les superbes numéros</a></p>
-            <p></p>
+
         <div class="card" style="width: 18rem;">
 
         <a href="{{ path('compil3')}}">
