--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -18,8 +18,8 @@
         <a href="{{ path('oisif2')}}"> <img src="{{ asset('/img/oisif-2.png') }}" class="img-logo" alt="oisif agressif" width="280px"></a>
         <a href="{{ path('oisif3')}}"> <img src="{{ asset('/img/oisif-3.png') }}" class="img-logo" alt="oisif agressif" width="280px"></a>
     </div>
-
-    {% block footer %}
+    {% block retourNav %}
     {% endblock %}
+
 </div>
 {% endblock %}
