--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,15 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121294315-1 …"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-121294315-1');
+        </script>
     </head>
     <body>
     <div class="container">
@@ -36,7 +45,7 @@
 
             <div class="container">
 
-                <span class="text-muted"><a href="https://www.instagram.com/oisifagressif/?hl=fr">Suis-nous sur <i class="fab fa-instagram"></i> et gagne des points de Karma !</a></span>
+                <span class="text-muted"><a href="https://www.instagram.com/oisifagressif/?hl=fr" target = "_blank">Suis-nous sur <i class="fab fa-instagram"></i> et gagne des points de Karma !</a></span>
             </div>
             {% endblock %}
 
