--- a/templates/default/3.html.twig
+++ b/templates/default/3.html.twig
@@ -26,7 +26,7 @@
                 <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target = "_blank">octokunst.tumblr.com/</a></li>
             </ul>
 
-
+        <div class="row">
         <div class="card" style="width: 18rem;">
 
         <a href="{{ path('compil3')}}">
@@ -38,6 +38,21 @@
                 <p class="card-text">Ecouter la compil spéciale train. Merci Radix !</p>
                 </a>
             </div>
+
+        </div>
+        <div class="card" style="width: 18rem;">
+
+            <a href="{{ path('soluces')}}">
+                <img class="card-img-top" src="{{ asset('/img/solucessoluces.png') }}" alt="mystères">
+            </a>
+            <div class="card-body">
+                <h5 class="card-title">Les soluces</h5>
+                <a href="{{ path('soluces')}}">
+                    <p class="card-text">Les soluces des jeux. Merci Radix (bis) !</p>
+                </a>
+            </div>
+
+        </div>
         </div>
 
     </div>
