add issu for pdf

--- a/templates/default/3.html.twig
+++ b/templates/default/3.html.twig
@@ -26,6 +26,9 @@
                 <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target = "_blank">octokunst.tumblr.com/</a></li>
             </ul>
 
+        <div data-configid="32831657/63049562" style="width:100%; height:800px;" class="issuuembed"></div>
+        <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
+
         <div class="row">
         <div class="card" style="width: 18rem;">
 
