--- a/templates/default/3.html.twig
+++ b/templates/default/3.html.twig
@@ -8,51 +8,55 @@
     <div class="container">
         <div class="row">
             <div class="col-1">
-                <a href="{{ path('home')}}"> <img src="{{ asset('/img/oisif.png') }}" alt="oisif agressif"></a>
+                <a href="{{ path('home') }}"> <img src="{{ asset('/img/oisif.png') }}" alt="oisif agressif"></a>
             </div>
             <div class="col-sm">
                 <h1>Oisif Agressif n°3</h1>
             </div>
         </div>
-            <ul>
-                <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
-                    <a href="https://www.instagram.com/dernierechanceeditions/" target = "_blank">instagram.com/dernierechanceeditions/</a></li>
+        <ul>
+            <li><b>Dessins :</b> Delphine, des éditions de la dernière chance
+                <a href="https://www.instagram.com/dernierechanceeditions/" target="_blank">instagram.com/dernierechanceeditions/</a>
+            </li>
 
-                <li><b>Illustratrice invitée : </b>Sainte Mathilde
-                    <a href="https://www.instagram.com/sainte_mathilde/" target = "_blank">instagram.com/sainte_mathilde/</a></li>
-                <li><b>Invité jeux et playlist : </b>Seb And The Rhaadicks
-                    <a href="http://sebandtherhaadicks.tumblr.com/" target = "_blank">sebandtherhaadicks.tumblr.com/</a></li>
+            <li><b>Illustratrice invitée : </b>Sainte Mathilde
+                <a href="https://www.instagram.com/sainte_mathilde/" target="_blank">instagram.com/sainte_mathilde/</a>
+            </li>
+            <li><b>Invité jeux et playlist : </b>Seb And The Rhaadicks
+                <a href="http://sebandtherhaadicks.tumblr.com/" target="_blank">sebandtherhaadicks.tumblr.com/</a></li>
 
-                <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/" target = "_blank">octokunst.tumblr.com/</a></li>
-            </ul>
-
+            <li><b>Mise en page :</b> Boz, <a href="http://octokunst.tumblr.com/"
+                                              target="_blank">octokunst.tumblr.com/</a></li>
+        </ul>
+        <div data-configid="32831657/63049562" style="width:100%; height:800px;" class="issuuembed"></div>
+        <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
         <div class="row">
-        <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 18rem;">
 
-        <a href="{{ path('compil3')}}">
-            <img class="card-img-top" src="{{ asset('/img/Oisif-agressif-K7.jpg') }}" alt="Compil train">
-            </a>
-            <div class="card-body">
-                <h5 class="card-title">K7 du train</h5>
-                <a href="{{ path('compil3')}}">
-                <p class="card-text">Ecouter la compil spéciale train. Merci Radix !</p>
+                <a href="{{ path('compil3') }}">
+                    <img class="card-img-top" src="{{ asset('/img/Oisif-agressif-K7.jpg') }}" alt="Compil train">
                 </a>
+                <div class="card-body">
+                    <h5 class="card-title">K7 du train</h5>
+                    <a href="{{ path('compil3') }}">
+                        <p class="card-text">Ecouter la compil spéciale train. Merci Radix !</p>
+                    </a>
+                </div>
+
             </div>
+            <div class="card" style="width: 18rem;">
 
-        </div>
-        <div class="card" style="width: 18rem;">
-
-            <a href="{{ path('soluces')}}">
-                <img class="card-img-top" src="{{ asset('/img/solucessoluces.png') }}" alt="mystères">
-            </a>
-            <div class="card-body">
-                <h5 class="card-title">Les soluces</h5>
-                <a href="{{ path('soluces')}}">
-                    <p class="card-text">Les soluces des jeux. Merci Radix (bis) !</p>
+                <a href="{{ path('soluces') }}">
+                    <img class="card-img-top" src="{{ asset('/img/solucessoluces.png') }}" alt="mystères">
                 </a>
-            </div>
+                <div class="card-body">
+                    <h5 class="card-title">Les soluces</h5>
+                    <a href="{{ path('soluces') }}">
+                        <p class="card-text">Les soluces des jeux. Merci Radix (bis) !</p>
+                    </a>
+                </div>
 
-        </div>
+            </div>
         </div>
 
     </div>
